feat: 修改更新HEAD和printLog的bug